--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gsap": "^3.8.0",
     "node-sass": "^4.14.1",
     "vue": "^3.0.0",
     "vuex": "^4.0.2"
